[metadata]
name = Playcord
version = 1.0.0
author = ysfchn
description = Show your PlayStation status as Discord Rich Presence.
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ysfchn/Playcord
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    pypresence
    httpx
    rich
    readsettings
    toga==0.3.0.dev28
